--- a/tools/webpack/webgis/service/service.scss
+++ b/tools/webpack/webgis/service/service.scss
@@ -36,16 +36,71 @@
   }
 }
 
+////////////////////////////////////////////////////////////////
+
 #card_search {
+  .card-body {
+    padding: 0;
+
+    .ribbon-target {
+      right: -2px;
+      top: 10px;
+    }
+
+    #kt_card_1 {
+      .card-header {
+        min-height: 0;
+      }
+
+      .card-body {
+        padding: 0;
+
+        #card_search_map {
+          width: 100%;
+          height: 45vh;
+          border-radius: 5px;
+        }
+      }
+    }
+
+    #kt_card_2 {
+      .card-body {
+        padding: 0;
+
+        #card_dist_map {
+          width: 100%;
+          height: 80vh;
+          border-radius: 5px;
+        }
+      }
+    }
+
+    #kt_datatable {
+      margin: 0 0 1rem 0 !important;
+
+      td {
+        white-space: nowrap;
+        padding: 0 1rem;
+      }
+
+      th {
+        white-space: nowrap;
+      }
+    }
+  }
+
+  .button {
+    position: absolute;
+    left: 50%;
+    bottom: 5px;
+    margin: 0 auto;
+    z-index: 1000;
+    padding: 5px;
+  }
+
   .overlay-layer {
     border-radius: 0.5rem;
     display: none;
-  }
-
-  // demo5/src/sass/vendors/plugins/_datatables.scss:38
-
-  .dataTables_wrapper .dataTable th, .dataTables_wrapper .dataTable td {
-    padding: 0.15rem 0.75rem;
   }
 }
 
@@ -53,4 +108,18 @@
 
 .was-validated .form-control:valid, .form-control.is-valid {
   padding-right: 0;
+}
+
+////////////////////////////////////////////////////////////////
+
+// demo5/src/sass/components/_table.scss:46
+
+.table {
+  &.table-head-custom {
+    thead {
+      tr, th {
+        color: black !important;
+      }
+    }
+  }
 }
