--- a/views/partials/_content-service-search.html
+++ b/views/partials/_content-service-search.html
@@ -1,122 +1,100 @@
 <!--begin::Entry-->
-<div class="d-flex flex-column-fluid">
+<div class="d-flex flex-column-fluid mb-5">
   <!--begin::Container-->
-  <div class="container">
+  <div class="container-fluid">
     <!--begin::Notice-->
 
     <!--end::Notice-->
     <!--begin::Card-->
-    <div class="card card-custom gutter-b example example-compact card-fit card-border" id="card_search">
+    <div class="card card-custom card-fit card-border border-transparent" id="card_search">
       <div class="card-body">
-        <!--begin: Search Form-->
-        <form class="form mb-2" id="service_search_form" novalidate="novalidate">
-          <div class="row mb-2">
-            <div class="col-lg-3 mb-lg-0 mb-6">
-              <label>접수번호</label>
-              <div class="input-icon">
-                <input type="text" class="form-control datatable-input" placeholder="" data-col-index="0"/>
-                <span><i class="la la-info-circle"></i></span>
-              </div>
-            </div>
-            <div class="col-lg-3 mb-lg-0 mb-6">
-              <label>민원인</label>
-              <div class="input-icon">
-                <input type="text" class="form-control datatable-input" name="reg_nam" placeholder=""
-                       data-col-index="1"/>
-                <span><i class="la la-user"></i></span>
-              </div>
-            </div>
-            <div class="col-lg-3 mb-lg-0 mb-6">
-              <label>접수내용</label>
-              <select class="form-control selectpicker datatable-input" title="선택하세요" data-col-index="2">
-                <option>단수</option>
-                <option>도로 누수</option>
-                <option>저수압</option>
-                <option>수질</option>
-                <option>신규 급수 신청</option>
-                <option>앵글밸브 고장</option>
-                <option>보호통 누수 및 교체</option>
-                <option>계량기 동파</option>
-                <option>기타</option>
-              </select>
-            </div>
-            <div class="col-lg-3 mb-lg-0 mb-6">
-              <label>접수자</label>
-              <div class="input-icon">
-                <input type="text" class="form-control datatable-input" placeholder="" data-col-index="4"/>
-                <span><i class="la la-user"></i></span>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-2">
-            <div class="col-lg-3 mb-lg-0 mb-6">
-              <label>접수일자</label>
-              <div class="input-daterange input-group" id="kt_datepicker">
-                <input type="text" class="form-control datatable-input" name="start" placeholder="시작일"
-                       data-col-index="5"/>
-                <div class="input-group-append">
-                  <span class="input-group-text">
-                    <i class="la la-ellipsis-h"></i>
-                  </span>
+        <div class="tab-content">
+          <div class="tab-pane fade show active" id="kt_tab_pane_4_1" role="tabpanel">
+            <div class="card card-custom card-border border-transparent" data-card="true" id="kt_card_1">
+              <div class="card-header border-transparent">
+                <div class="card-title">
+                <span class="card-icon">
+															<i class="flaticon2-pin text-primary"></i>
+														</span>
+                  <h3 class="card-label">민원 상세 검색
+                    <small></small></h3>
                 </div>
-                <input type="text" class="form-control datatable-input" name="end" placeholder="종료일"
-                       data-col-index="5"/>
+                <div class="card-toolbar border-transparent">
+                  <a href="#" class="btn btn-icon btn-light-primary btn-sm px-2 px-lg-5 mr-2" data-card-tool="toggle">
+                    <i class="ki ki-arrow-down icon-nm"></i>
+                  </a>
+                  <!--begin::Dropdown-->
+                  <div class="dropdown dropdown-inline mr-2">
+                    <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder dropdown-toggle"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="la la-download"></i>내보내기
+                    </button>
+                    <!--begin::Dropdown Menu-->
+                    <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
+                      <ul class="nav flex-column nav-hover">
+                        <li class="nav-item">
+                          <a href="#" class="nav-link" id="export_print">
+                            <i class="nav-icon la la-print"></i>
+                            <span class="nav-text">인쇄</span>
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="#" class="nav-link" id="export_excel">
+                            <i class="nav-icon la la-file-excel-o"></i>
+                            <span class="nav-text">Excel</span>
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                    <!--end::Dropdown Menu-->
+                  </div>
+                  <!--end::Dropdown-->
+                </div>
+              </div>
+              <div class="card-body border-transparent ribbon ribbon-right">
+                <div id="card_search_map"></div>
+                <div class="ribbon-target bg-light">
+                  <strong>0</strong>&nbsp;검색
+                </div>
               </div>
             </div>
-            <div class="col-lg-3 mb-lg-0 mb-6">
-              <label>진행상태</label>
-              <select class="form-control selectpicker datatable-input" title="선택하세요" data-col-index="6">
-                <option>처리 중</option>
-                <option>완료</option>
-              </select>
-            </div>
-            <div class="col-lg-6 mb-lg-0 mb-6">
-              <label>주소 (도로명 또는 지번)</label>
-              <div class="input-icon">
-                <input type="text" class="form-control datatable-input" placeholder="예: '광복로 65' 또는 '영주동 19-1'"
-                       data-col-index="7"/>
-                <span><i class="la la-map-marker"></i></span>
+            <!--begin: Datatable-->
+            <table class="table table-separate table-head-custom nowrap" id="kt_datatable">
+              <thead>
+              <tr>
+                <th class="dtr-control">기능</th>
+                <th>번호</th>
+                <th>접수자</th>
+                <th>일자</th>
+                <th>민원인</th>
+                <th>연락처</th>
+                <th>주소</th>
+                <th>접수</th>
+                <th>진행</th>
+                <th>상세</th>
+                <th>대행</th>
+                <th>기한</th>
+                <th>x</th>
+                <th>y</th>
+              </tr>
+              </thead>
+            </table>
+            <!--end: Datatable-->
+          </div>
+          <div class="tab-pane fade" id="kt_tab_pane_4_2" role="tabpanel">
+            <div class="card card-custom card-border border-transparent" data-card="true" id="kt_card_2">
+              <div class="card-body border-transparent ribbon ribbon-right">
+                <div id="card_dist_map"></div>
+                <div class="ribbon-target bg-light">
+                  <strong>0</strong>&nbsp;검색
+                </div>
               </div>
             </div>
           </div>
-          <div class="row mt-4">
-            <div class="col-lg-12">
-              <button type="submit" class="btn btn-primary btn-primary--icon" id="kt_search">
-                <span>
-                  <i class="la la-search"></i><span>검색</span>
-                </span>
-              </button>&#160;&#160;
-              <button type="reset" class="btn btn-secondary btn-secondary--icon" id="kt_reset">
-                <span>
-                  <i class="la la-close"></i><span>초기화</span>
-                </span>
-              </button>
-            </div>
-          </div>
-        </form>
-        <!--begin: Datatable-->
-        <table class="table table-bordered table-hover table-checkable" id="kt_datatable">
-          <thead>
-          <tr>
-            <th>Record ID</th>
-            <th>Order ID</th>
-            <th>Country</th>
-            <th>Ship City</th>
-            <th>Company Agent</th>
-            <th>Ship Date</th>
-            <th>Status</th>
-            <th>Type</th>
-            <th>Actions</th>
-          </tr>
-          </thead>
-        </table>
-        <!--end: Datatable-->
+        </div>
       </div>
-      <div class="overlay-layer bg-gray-o-75">
-        <div class="spinner spinner-track spinner-primary spinner-lg"></div>
-      </div>
+      <!--end::Card-->
     </div>
-    <!--end::Card-->
   </div>
   <!--end::Container-->
 </div>
