--- a/views/partials/_subheader/_subheader-service-search.html
+++ b/views/partials/_subheader/_subheader-service-search.html
@@ -1,13 +1,18 @@
 <!--begin::Subheader-->
 <div class="subheader py-3 py-lg-4 subheader-transparent" id="kt_subheader">
-  <div class="container d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+  <div class="container-fluid d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+
     <!--begin::Info-->
     <div class="d-flex align-items-center flex-wrap mr-1">
+
       <!--begin::Page Heading-->
       <div class="d-flex align-items-baseline flex-wrap mr-5">
+
         <!--begin::Page Title-->
-        <h2 class="subheader-title text-dark font-weight-bold my-1 mr-3">민원 검색</h2>
+        <h2 class="subheader-title text-dark font-weight-bold my-1 mr-3">민원 조회</h2>
+
         <!--end::Page Title-->
+
         <!--begin::Breadcrumb-->
         <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold my-2 p-0">
           <li class="breadcrumb-item">
@@ -17,81 +22,39 @@
             <a href="/register" class="text-muted">민원</a>
           </li>
         </ul>
+
         <!--end::Breadcrumb-->
       </div>
+
       <!--end::Page Heading-->
     </div>
+
     <!--end::Info-->
+
     <!--begin::Toolbar-->
+
     <div class="d-flex align-items-center">
-      <!--begin::Dropdown-->
-      <div class="dropdown dropdown-inline mr-2">
-        <button type="button" class="btn btn-light-primary font-weight-bolder dropdown-toggle"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="0,5">
-												<span class="svg-icon svg-icon-md"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Files\Export.svg--><svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
-    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <rect x="0" y="0" width="24" height="24"/>
-        <path
-            d="M17,8 C16.4477153,8 16,7.55228475 16,7 C16,6.44771525 16.4477153,6 17,6 L18,6 C20.209139,6 22,7.790861 22,10 L22,18 C22,20.209139 20.209139,22 18,22 L6,22 C3.790861,22 2,20.209139 2,18 L2,9.99305689 C2,7.7839179 3.790861,5.99305689 6,5.99305689 L7.00000482,5.99305689 C7.55228957,5.99305689 8.00000482,6.44077214 8.00000482,6.99305689 C8.00000482,7.54534164 7.55228957,7.99305689 7.00000482,7.99305689 L6,7.99305689 C4.8954305,7.99305689 4,8.88848739 4,9.99305689 L4,18 C4,19.1045695 4.8954305,20 6,20 L18,20 C19.1045695,20 20,19.1045695 20,18 L20,10 C20,8.8954305 19.1045695,8 18,8 L17,8 Z"
-            fill="#000000" fill-rule="nonzero" opacity="0.3"/>
-        <rect fill="#000000" opacity="0.3"
-              transform="translate(12.000000, 8.000000) scale(1, -1) rotate(-180.000000) translate(-12.000000, -8.000000) "
-              x="11" y="2" width="2" height="12" rx="1"/>
-        <path
-            d="M12,2.58578644 L14.2928932,0.292893219 C14.6834175,-0.0976310729 15.3165825,-0.0976310729 15.7071068,0.292893219 C16.0976311,0.683417511 16.0976311,1.31658249 15.7071068,1.70710678 L12.7071068,4.70710678 C12.3165825,5.09763107 11.6834175,5.09763107 11.2928932,4.70710678 L8.29289322,1.70710678 C7.90236893,1.31658249 7.90236893,0.683417511 8.29289322,0.292893219 C8.68341751,-0.0976310729 9.31658249,-0.0976310729 9.70710678,0.292893219 L12,2.58578644 Z"
-            fill="#000000" fill-rule="nonzero"
-            transform="translate(12.000000, 2.500000) scale(1, -1) translate(-12.000000, -2.500000) "/>
-    </g>
-</svg><!--end::Svg Icon--></span>
-          내보내기
-        </button>
-        <!--begin::Dropdown Menu-->
-        <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
-          <!--begin::Navigation-->
-          <ul class="navi flex-column navi-hover py-2">
-            <li class="navi-header font-weight-bolder text-uppercase font-size-sm text-primary pb-2">내보내기 형식:</li>
-            <li class="navi-item">
-              <a href="#" class="navi-link  buttons-excel buttons-html5" id="export_print">
-																<span class="navi-icon">
-																	<i class="la la-print"></i>
+      <ul class="nav nav-light-primary nav-bolder nav-pills nav-fill">
+        <li class="nav-item">
+          <a class="nav-link active" data-toggle="tab" href="#kt_tab_pane_4_1">
+            <span class="nav-icon">
+																	<i class="la la-search-plus icon-xl"></i>
+                                </span>
+            <span class="nav-text">검색</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#kt_tab_pane_4_2">
+																<span class="nav-icon">
+																	<i class="la la-map-marked-alt icon-xl"></i>
 																</span>
-                <span class="navi-text">인쇄</span>
-              </a>
-            </li>
-            <li class="navi-item">
-              <a href="#" class="navi-link" id="export_excel">
-																<span class="navi-icon">
-																	<i class="la la-file-excel-o"></i>
-																</span>
-                <span class="navi-text">Excel</span>
-              </a>
-            </li>
-            <li class="navi-item">
-              <a href="#" class="navi-link" id="export_csv">
-																<span class="navi-icon">
-																	<i class="la la-file-text-o"></i>
-																</span>
-                <span class="navi-text">CSV</span>
-              </a>
-            </li>
-            <li class="navi-item">
-              <a href="#" class="navi-link" id="export_pdf">
-																<span class="navi-icon">
-																	<i class="la la-file-pdf-o"></i>
-																</span>
-                <span class="navi-text">PDF</span>
-              </a>
-            </li>
-          </ul>
-          <!--end::Navigation-->
-        </div>
-        <!--end::Dropdown Menu-->
-      </div>
-      <!--end::Dropdown-->
+            <span class="nav-text">지도</span>
+          </a>
+        </li>
+      </ul>
     </div>
     <!--end::Toolbar-->
   </div>
 </div>
+
 <!--end::Subheader-->
