--- a/views/service-register.html
+++ b/views/service-register.html
@@ -25,7 +25,7 @@
       <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
 
         <!--[html-partial:include:{"file":"partials/_subheader/subheader-v6.html"}]/-->{{>
-        _subheader/_subheader-service-register}}
+      _subheader/_subheader-service-register}}
 
         <!--[html-partial:include:{"file":"partials/_content.html"}]/-->{{> _content-service-register}}
       </div>
@@ -140,8 +140,7 @@
 
 <!--begin::Page Scripts(used by this page)-->
 <script src="assets/js/pages/widgets.js"></script>
-<script src="assets/js/serv.maps.js"></script>
-<script src="assets/js/serv.bundle.js"></script>
+<script src="assets/js/serv.register.js"></script>
 <script>
   $('.navi-link').removeClass('active');
   $('#navi-link-0').addClass('active');
