--- a/views/partials/_content-service-search.html
+++ b/views/partials/_content-service-search.html
@@ -10,7 +10,7 @@
       <div class="card-body">
         <div class="tab-content">
           <div class="tab-pane fade show active" id="kt_tab_pane_4_1" role="tabpanel">
-            <div class="card card-custom card-border border-transparent" data-card="true" id="kt_card_1">
+            <div class="card card-custom card-border border-transparent mb-2" data-card="true" id="kt_card_1">
               <div class="card-header border-transparent">
                 <div class="card-title">
                 <span class="card-icon">
@@ -73,7 +73,6 @@
                 <th>진행</th>
                 <th>상세</th>
                 <th>대행</th>
-                <th>기한</th>
                 <th>x</th>
                 <th>y</th>
               </tr>
