feature: Show "WTT_SCH_ADDRESS" (대행업체 당직표) table in a modal
Add modal html snippet to all pages
Set modal to be non-static so that it closes on losing focus

--- a/tools/webpack/webgis/service/service.scss
+++ b/tools/webpack/webgis/service/service.scss
@@ -13,6 +13,28 @@
 
 ////////////////////////////////////////////////////////////////
 
+#exampleModal {
+  .modal-header {
+    padding: 1rem 1rem;
+  }
+
+  .modal-body {
+    padding: 0 1rem;
+  }
+
+  .table th,
+  .table td {
+    padding: 0.75rem 0;
+  }
+
+  .modal-footer {
+    white-space: pre-wrap;
+    justify-content: flex-start;
+  }
+}
+
+////////////////////////////////////////////////////////////////
+
 #card_register {
   .input-group-text {
     border: none;
