--- a/views/partials/_header-service-search.html
+++ b/views/partials/_header-service-search.html
@@ -138,7 +138,7 @@
             </li>
             <div class="separator separator-dashed my-4"></div>
             <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">근무</li>
-            <li class="navi-item" data-toggle="modal" data-target="#staticBackdrop">
+            <li class="navi-item" data-toggle="modal" data-target="#exampleModal">
               <a href="javascript:;" class="navi-link">
 													<span class="navi-icon">
 														<i class="la la-calendar icon-xl"></i>
