feature: Show "WTT_PRES_MANAGE" (가압장 관리업체 현황) table in a modal
Add modal html snippet to only index page

--- a/tools/webpack/webgis/service/service.scss
+++ b/tools/webpack/webgis/service/service.scss
@@ -13,18 +13,22 @@
 
 ////////////////////////////////////////////////////////////////
 
-#exampleModal {
+#exampleModal, #exampleModal2 {
   .modal-header {
     padding: 1rem 1rem;
   }
 
   .modal-body {
     padding: 0 1rem;
+
+    .dataTables_filter {
+      padding: 1rem 0 0 0;
+    }
   }
 
   .table th,
   .table td {
-    padding: 0.75rem 0;
+    padding: 0.75rem 0.1rem;
   }
 
   .modal-footer {
