--- a/views/index.html
+++ b/views/index.html
@@ -57,6 +57,8 @@
 <!--[html-partial:include:{"file":"partials/_extras/offcanvas/demo-panel.html"}]/-->
 
 {{> _modal/_sch-address}}
+
+{{> _modal/_pres-manage}}
 <script>
   var HOST_URL = 'https://preview.keenthemes.com/metronic/theme/html/tools/preview';
 </script>
@@ -141,6 +143,7 @@
 <script src="assets/js/pages/widgets.js"></script>
 <script src="assets/js/maps.bundle.js"></script>
 <script src="assets/js/serv.schedule.js"></script>
+<script src="assets/js/serv.pres.js"></script>
 <script>
   $('.navi-link').removeClass('active');
 </script>
