--- a/views/partials/_header-service-register.html
+++ b/views/partials/_header-service-register.html
@@ -153,7 +153,7 @@
           <!--begin::Navigation-->
           <ul class="navi navi-hover navi-active navi-accent py-5">
             <li class="navi-item">
-              <a href="/service/register" class="navi-link active" id="navi-link-0">
+              <a href="/service/register" class="navi-link active" id="navi-search-link-0">
 													<span class="navi-icon">
 														<i class="la la-pen icon-xl"></i>
 													</span>
@@ -161,7 +161,7 @@
               </a>
             </li>
             <li class="navi-item">
-              <a href="#" class="navi-link" id="navi-link-1">
+              <a href="#" class="navi-link" id="navi-search-link-1">
 													<span class="navi-icon">
 														<i class="la la-map-marked-alt icon-xl"></i>
 													</span>
@@ -170,7 +170,7 @@
               </a>
             </li>
             <li class="navi-item">
-              <a href="service/search" class="navi-link" id="navi-link-2">
+              <a href="service/search" class="navi-link" id="navi-search-link-2">
 													<span class="navi-icon">
 														<i class="la la-search-plus icon-xl"></i>
 													</span>
