--- a/views/service-register.html
+++ b/views/service-register.html
@@ -146,7 +146,7 @@
 <script src="assets/js/serv.schedule.js"></script>
 <script>
   $('.navi-link').removeClass('active');
-  $('#navi-link-0').addClass('active');
+  $('#navi-search-link-0').addClass('active');
 </script>
 <!--end::Page Scripts-->
 </body>
